--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ tests/simple-built.js
 tests/plugins/plugins-built.js
 tests/plugins/coffee-built.js
 tests/plugins/text-built.js
+tests/plugins/order/order-built.js
