--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 tests/simple-built.js
+tests/moduleConfig/moduleConfig-built.js
 tests/plugins/plugins-built.js
 tests/plugins/coffee-built.js
 tests/plugins/text-built.js
