Added ignore list to bower.json

--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "almond",
   "version": "0.2.6",
   "main": "almond.js",
-  "ignore": {
+  "ignore": [
     "tests",
     "shrinktest.sh"
-  }
+  ]
 }
