--- a/package.json
+++ b/package.json
@@ -2,22 +2,13 @@
   "name": "almond",
   "description": "A minimal AMD API implementation for use in optimized browser builds.",
   "version": "0.3.1",
-  "homepage": "http://github.com/jrburke/almond",
+  "homepage": "http://github.com/requirejs/almond",
   "author": "James Burke <jrburke@gmail.com> (http://github.com/jrburke)",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jrburke/almond.git"
+    "url": "git://github.com/requirejs/almond.git"
   },
-  "licenses": [
-    {
-      "type": "BSD",
-      "url": "https://github.com/jrburke/almond/blob/master/LICENSE"
-    },
-    {
-      "type": "MIT",
-      "url": "https://github.com/jrburke/almond/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "main": "almond.js",
   "engines": {
     "node": ">=0.4.0"
